# context-ledger

./: .gitignore  MESSAGES.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260320_0001_initial_schema.py  20260320_0002_read_path_indexes.py
app/: __init__.py  main.py
app/api/v1/: __init__.py  router.py  (+2 more)
app/compatibility/: __init__.py  openai_router.py
app/core/: __init__.py  settings.py
app/db/: __init__.py  base.py  bootstrap.py  models.py  repositories.py  session.py
app/memory/: __init__.py  ledger.py
app/providers/: __init__.py  base.py  deterministic_provider.py  registry.py
configs/: config.example.yaml
configs/policies/: policy.example.rego
docs/: API-Spec-v1.md  Architecture-v1.md  Compatibility-Strategy-v1.md  Config-Spec-v1.md  ContextLedger-Design-v1.md  Data-Model-v1.md  Deployment-Guide-v1.md  Development-Guide-v1.md  Extensibility-and-Upgrade-Plan-v1.md  File-Management-Plan-v1.md  Handover-Guide-v1.md  Operational-Workflow-v1.md  PRD-v1.md  Progress-Tracker.md  README.md  Research-Scan-2026-03-19.md  Roadmap-v1.md  Tech-Stack-v1.md  Tech-Upgrade-v2.md  Test-Plan-v1.md
infra/: README.md
scripts/: README.md  run_openai_compat_benchmark.py  run_sql_read_benchmark.py
tests/: conftest.py
tests/compatibility/: test_openai_gateway_skeleton.py
tests/integration/: test_v1_chat.py  test_v1_health.py  test_v1_resume.py  test_v1_timeline.py
tests/unit/: test_budget_service.py  test_db_repository.py  test_db_schema.py  test_db_session.py  test_memory_ledger.py  test_provider_registry.py
